# STM32CubeF4

Projects/STM32F4-Discovery/Templates_LL/: CMakeLists.txt  TC-mingw.cmake
